<resources>
    <string name="app_name">Gujarat Gk in Gujarati</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About</string>
    <string name="nav_header_title">Gujarat GK</string>
    <string name="nav_header_subtitle">Learn &amp; Grow</string>
</resources>