<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="Leaderboard" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_result"
            android:title="Result" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_nav_rate"
                android:title="@string/nav_rate_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_nav_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_nav_about"
                android:title="@string/nav_about" />
        </menu>
    </item>
</menu>
